--- a/sinopse.html
+++ b/sinopse.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sinopse</title>
-    <link rel ="stylesheet" href="styles.css">
+    <title>Sinopse - Avatar: O Caminho da Água</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="banner">
-        <br>
-        <h1><p>Sinopse</p></h1>
-    </div>
+    <!-- Menu Lateral -->
+    <div class="menu-toggle" id="menu-toggle">☰</div>
+    <nav class="slide-menu" id="slide-menu">
+        <ul>
+            <li><a href="sinopse.html"><i class="fas fa-film"></i> Sinopse</a></li>
+            <li><a href="trailer.html"><i class="fas fa-video"></i> Trailer</a></li>
+            <li><a href="elenco.html"><i class="fas fa-users"></i> Elenco</a></li>
+            <li><a href="curiosidade.html"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
+        </ul>
+    </nav>
 
-    <br>
-    <br>
-    <br>
+    <!-- Banner de Título -->
+    <section class="banner">
+        <h1>Sinopse</h1>
+    </section>
 
-    <center><h2>Avatar: O Caminho da Água" (2022) é a sequência do filme "Avatar" (2009), dirigido por James Cameron. A trama se<br>
-        passa mais de uma década após os eventos do primeiro filme e continua acompanhando a jornada de Jake Sully (Sam<br>
-        Worthington), que agora vive no planeta Pandora com sua família e está totalmente integrado ao povo Na'vi.<br>
-        <br>
-        Jake e
-        Neytiri (Zoe Saldana) têm filhos e tentam viver em paz, mas quando uma antiga ameaça reaparece, eles são <br>
-        forçados a de suas terras para proteger sua família. Eles buscam refúgio junto a um clã que vive nas costas de Pandora e que <br> tem uma
-        conexão profunda com o oceano e as criaturas marinhas locais.
-        A partir daí, o filme explora temas como família, sobrevivência e respeito <br>
-        à natureza, enquanto Jake, e seus filhos aprendem a viver no ambiente aquático e enfrentam desafios físicos e emocionais.
-        <br>
-        <br>A produção é conhecida por seu visual impressionante e pelo uso inovador da tecnologia de captura de movimento debaixo d'água, criando <br> um mundo subaquático deslumbrante. "Avatar: O Caminho da Água" expande o universo de Pandora, introduzindo novos personagens e espécies, <br> enquantocontinua a explorar a luta entre os humanos e os Na'vi.
-    </h2></center>
+    <!-- Conteúdo da Sinopse -->
+    <section class="content">
+        <center>
+            <h2>
+                "Avatar: O Caminho da Água" (2022) é a sequência do filme "Avatar" (2009), dirigido por James Cameron. A trama se
+                passa mais de uma década após os eventos do primeiro filme e continua acompanhando a jornada de Jake Sully (Sam
+                Worthington), que agora vive no planeta Pandora com sua família e está totalmente integrado ao povo Na'vi.
+                <br><br>
+                Jake e Neytiri (Zoe Saldana) têm filhos e tentam viver em paz, mas quando uma antiga ameaça reaparece, eles são
+                forçados a abandonar suas terras para proteger sua família. Eles buscam refúgio junto a um clã que vive nas costas de Pandora e que
+                tem uma conexão profunda com o oceano e as criaturas marinhas locais.
+                <br><br>
+                A partir daí, o filme explora temas como família, sobrevivência e respeito à natureza, enquanto Jake e seus filhos aprendem a viver no ambiente aquático e enfrentam desafios físicos e emocionais.
+                <br><br>
+                A produção é conhecida por seu visual impressionante e pelo uso inovador da tecnologia de captura de movimento debaixo d'água, criando um mundo subaquático deslumbrante. "Avatar: O Caminho da Água" expande o universo de Pandora, introduzindo novos personagens e espécies, enquanto continua a explorar a luta entre os humanos e os Na'vi.
+            </h2>
+        </center>
+    </section>
 
+    <!-- Rodapé -->
+    <footer class="footer">
+        <p>&copy; Avatar: O Caminho da Água - Todos os direitos reservados</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
