--- a/curiosidade.html
+++ b/curiosidade.html
@@ -7,6 +7,17 @@
     <link rel ="stylesheet" href="styles.css">
 </head>
 <body>
+     <div class="menu-toggle" id="menu-toggle">☰</div>
+    <nav class="slide-menu" id="slide-menu">
+        <ul>  
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="sinopse.html"><i class="fas fa-film"></i> Sinopse</a></li>
+            <li><a href="trailer.html"><i class="fas fa-video"></i> Trailer</a></li>
+            <li><a href="elenco.html"><i class="fas fa-users"></i> Elenco</a></li>
+            <li><a href="curiosidade.html"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
+           
+        </ul>
+    </nav>
     <div class="banner">
         <br>
         <center><h3><i>Curiosidades</i></h3></center>
@@ -25,6 +36,6 @@
             <div class="containercuriosidades">
                 <h2>Longo tempo de produção</h2>
                 </div>
-            <p>O filme demorou quase 13 anos para ser lançado após o primeiro Avatar. Parte <br>desse tempo foi devido ao desenvolvimento das tecnologias necessárias para <br> as filmagens subaquáticas e os complexos efeitos visuais. Cameron também <br> decidiu filmar O Caminho da Água junto com as sequências 3 e 4 da franquia.
-    </body>
+            <p>
+                <script src="script.js"></script>
 </body>
