--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <div class="menu-toggle" id="menu-toggle">☰</div>
     <nav class="slide-menu" id="slide-menu">
         <ul>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="sinopse.html">Sinopse</a></li>
             <li><a href="trailer.html">Trailer</a></li>
             <li><a href="elenco.html">Elenco</a></li>
             <li><a href="curiosidade.html">Curiosidade</a></li>
+            
 
 
         </ul>
