--- a/sinopse.html
+++ b/sinopse.html
@@ -11,11 +11,12 @@
     <div class="menu-toggle" id="menu-toggle">☰</div>
     <nav class="slide-menu" id="slide-menu">
         <ul>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="sinopse.html"><i class="fas fa-film"></i> Sinopse</a></li>
             <li><a href="trailer.html"><i class="fas fa-video"></i> Trailer</a></li>
             <li><a href="elenco.html"><i class="fas fa-users"></i> Elenco</a></li>
             <li><a href="curiosidade.html"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
-        </ul>
+          
     </nav>
 
     <!-- Banner de Título -->
