--- a/trailer.html
+++ b/trailer.html
@@ -7,6 +7,19 @@
     <link rel ="stylesheet" href="styles.css">
 </head>
 <body>
+     <div class="menu-toggle" id="menu-toggle">☰</div>
+    <nav class="slide-menu" id="slide-menu">
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="sinopse.html"><i class="fas fa-film"></i> Sinopse</a></li>
+            <li><a href="trailer.html"><i class="fas fa-video"></i> Trailer</a></li>
+            <li><a href="elenco.html"><i class="fas fa-users"></i> Elenco</a></li>
+            <li><a href="curiosidade.html"><i class="fas fa-lightbulb"></i> Curiosidades</a></li>
+            
+
+        </ul>
+    </nav>
+
     <div class="banner">
     <br>
     <center><h3><i>Trailer Avatar:O Caminho da Água</i></h3></center>
@@ -16,5 +29,6 @@
 <br>
 <center><iframe width="1300" height="800" src="https://www.youtube.com/embed/x5pZI-DmtrE?si=FJ9ijiizIXiGenmU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </center>
+<script src="script.js"></script>
 </body>
 </html>
